[package]
name = "x-python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lib]
name = "kaspapy"
crate-type = ["cdylib"]

[dependencies]
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus.workspace = true
kaspa-consensus-core.workspace = true
kaspa-database.workspace = true
kaspa-hashes.workspace = true
kaspa-grpc-python.workspace = true
kaspa-math.workspace = true
kaspa-utxoindex.workspace = true
kaspa-txscript.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-keys.workspace = true

chrono = "0.4"
csv = "1.2"
dirs = "4.0"
itertools.workspace = true
serde.workspace = true
pyo3.workspace = true

[features]
py-sdk = []