[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspapy"
version = "0.0.1"
description = "A Python package for Kaspa development"
license = "ISC"
authors = [{name = "smartgoo", email = "smartgoo@c5labs.dev"}]
# readme = "README.md"
# documentation = "https://your_documentation_link"
repository = "https://github.com/smartgoo/kaspadbr"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = [
    "grpcio",
    "grpcio-tools",
]

[package.metadata.maturin]
name = "kaspapy"
description = "A Python package for Kaspa development"
author = "smartgoo <smartgoo@c5labs.dev>"

[tool.maturin]
name = "kaspapy"
# python-source = "python"