[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspadbr"
version = "0.0.1"
description = "Kaspa Database Reader"
license = "ISC"
# readme = "README.md"
# documentation = "https://your_documentation_link"
repository = "https://github.com/smartgoo/kaspadbr"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = []

[package.metadata.maturin]
name = "kaspadbr"
description = "Kaspa Database Reader"

[tool.maturin]
name = "kaspadbr"
# python-source = "python"